# alfred-letterboxd

./: .gitignore  .goreleaser.yaml  LICENSE  Makefile  README.md  go.mod  go.sum  info.plist  lbsearch.py  main.go  main_test.go  pyproject.toml
.github/workflows/: codeql.yml  release.yml  test.yml
alfred/: output.go
cache/: cache.go  cache_test.go
letterboxd/: cache.go  cache_test.go  client.go  films.go  people.go  types.go
tests/: test_lbsearch.py
